--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,12 @@
   padding: 0 16px;
 }
 
+.lg__con {
+  max-width: 2560px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 a {
   color: inherit;
   text-decoration: inherit;
