--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -18,6 +18,12 @@
         color: #3f3f40;
         text-decoration: none;
       }
+      span {
+        color: #707070;
+        font-size: 12px;
+        line-height: 1.3333733333;
+        margin-left: 60px;
+      }
     }
   }
 }
