--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -17,10 +17,10 @@
   }
   .hero__btn {
     font-size: 16px;
-    padding: 10px 20px;
-    border-radius: 20px;
+    padding: 0 25px;
+    border-radius: 30px;
     position: relative;
-    z-index: 1;
+    // z-index: 1;
   }
   h2 {
     font-size: 55px;
