--- a/src/index.scss
+++ b/src/index.scss
@@ -1,41 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
-
-.container {
-  max-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 16px;
-}
-
-.lg__con {
-  max-width: 2560px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-li {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-input,
-button,
-textarea,
-select {
-  border: none;
-  outline: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
